# Span2

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: build.yml
hooks/: hook-pyqt6.py
span/: __init__.py  data_parser.py  graph_widget.py  inflection.py  main.py  main_window.py  video_sampler.py
